--- a/gshop/styles/sellerDesign.css
+++ b/gshop/styles/sellerDesign.css
@@ -18,7 +18,6 @@
     text-decoration: none;
     text-transform: capitalize;
     transition: all .2s linear;
-    background-color: #EBCBD4;
 }
 
 html{
@@ -29,7 +28,7 @@ html{
 }
 
 body{
-    background:#eee;
+    background-color: #EBCBD4;
 }
 
 section{
@@ -57,7 +56,7 @@ section{
 }
 
 .btn:hover{
-    background: var(--orange);
+    background: #BD1341;
     color:#fff;
 }
 
@@ -240,6 +239,28 @@ section{
     color:#BD1341;
     line-height: 1.8;
     padding:1rem 0;
+}
+
+.popUp{
+    width: 400px;
+    height: auto;
+    font-size: 15px;
+    background: #eee;
+    border-radius: 50px;
+    border: 1px solid #BD1341;
+    color: #BD1341;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    text-align: center;
+    padding: 20px 30px 30px;
+    visibility: hidden;
+
+}
+
+.open-popUp{
+    visibility: visible;
 }
 
 
