--- a/gshop/styles/regcss.css
+++ b/gshop/styles/regcss.css
@@ -2,155 +2,285 @@
 	margin: 0;
 	padding: 0;
     background: #EBCBD4;text-decoration: none;
+	margin-top: 10px;
 }
-body {
-	font-family: 'Roboto', cursive;
-}
-.banner-text {
-	width: 100%;
-	position: absolute;
-	z-index: 1;
-	display: inline-flex;
+.page-content {
+	width: 80%;
+	height: 80%;
+	margin:  auto auto;
+	display: flex;
+	display: -webkit-flex;
 	justify-content: center;
-}
-
-.banner-text .regimage{
-	margin-top:150px ;
-	margin-left: 50px;
-}
-
-.div1{
-    width: 35%;
-    height: 70%;
-    justify-content: center;
-	margin-top: 100px;
-	margin-left: 50px;
-    border-radius: 140px;
-}
-.div1 h1{
-	padding-bottom: 30px;
-}
-
-.div1 .form{
-    padding: 50px;
+	-o-justify-content: center;
+	-ms-justify-content: center;
+	-moz-justify-content: center;
+	-webkit-justify-content: center;
 	align-items: center;
-    justify-content: center;
-	margin-right: 40px;
-	background: rgba(255,255,255,0.1);
-	box-shadow: 0px 5px 35px rgba(0,0,0,0.2);
+	-o-align-items: center;
+	-ms-align-items: center;
+	-moz-align-items: center;
+	-webkit-align-items: center;
 }
-
-button{
-    background: #BD1341;
-    border-radius: 8px;
-    width: 100px;
-	color: #ffff;
-	opacity: 0.8;
-    font-weight: bold;
-    height: 40px;
+.form-v4-content  {
+	background-color: #BD1341;
+	width: 850px;
+	border-radius: 10px;
+	-o-border-radius: 10px;
+	-ms-border-radius: 10px;
+	-moz-border-radius: 10px;
+	-webkit-border-radius: 10px;
+	box-shadow: 0px 8px 20px 0px rgba(0, 0, 0, 0.15);
+	-o-box-shadow: 0px 8px 20px 0px rgba(0, 0, 0, 0.15);
+	-ms-box-shadow: 0px 8px 20px 0px rgba(0, 0, 0, 0.15);
+	-moz-box-shadow: 0px 8px 20px 0px rgba(0, 0, 0, 0.15);
+	-webkit-box-shadow: 0px 8px 20px 0px rgba(0, 0, 0, 0.15);
+	margin: 50px;
+	position: relative;
+	display: flex;
+	display: -webkit-flex;
+	font-family: 'Open Sans', sans-serif;
 }
-
-button:hover{
-    letter-spacing: 3px;
-    width: 120px;
-    height: 50px;
-    font-weight: bold;
-    background: #A34C64;
+.form-v4-content h2 {
+	font-weight: 700;
+	font-size: 30px;
+	color: #BD1341;
+	padding: 6px 0 0;
+	margin-bottom: 34px;
 }
-
-/* .banner-text .div1{
-    width: 50%;
-    height: 80%;
-    z-index: 1;
-    border: 2px solid #BD1341;
-} */
-/* .banner-text ul {
-	height: 50px;
-	float: right;
-}
-.banner-text ul li {
-	display: inline-block;
-	padding: 40px 15px;
-	text-transform: uppercase;
+.form-v4-content .form-left {
+	background-color: #EBCBD4;
+	border-top-left-radius: 10px;
+	border-bottom-left-radius: 10px;
+	padding: 20px 40px;
+	position: relative;
+	width: 100%;
 	color: #fff;
-	font-size: 20px;
 }
-.banner-text ul li:hover {
+
+.form-left img{
+width: 80%;
+height: 80%;
+}
+
+.form-left .dot{
+float: left;
+color: #BD1341;
+font-size: 28px;
+}
+
+.form-v4-content .form-left p {
+	font-size: 15px;
+	font-weight: 300;
+	line-height: 1.5;
+}
+.form-v4-content .form-left span {
+	font-weight: 700;
+}
+.form-v4-content .form-left .text-2 {
+	margin: 20px 0 25px;
+}
+.form-v4-content .form-left .account {
+	background: #fff;
+	border-top-left-radius: 5px;
+	border-bottom-right-radius: 5px;
+	width: 180px;
+	border: none;
+	margin: 15px 0 50px 0px;
 	cursor: pointer;
+	color: #333;
+	font-weight: 700;
+	font-size: 15px;
+	font-family: 'Open Sans', sans-serif;
+	appearance: unset;
+    -moz-appearance: unset;
+    -webkit-appearance: unset;
+    -o-appearance: unset;
+    -ms-appearance: unset;
+    outline: none;
+    -moz-outline: none;
+    -webkit-outline: none;
+    -o-outline: none;
+    -ms-outline: none;
 }
-.banner-text h2 {
-	text-align: center;
-	color: #fff;
-	font-size: 50px;
-	margin-top: 20%;
-} */
-/* .animation-area {
+.form-v4-content .form-left .account:hover {
+	background: #e5e5e5;
+}
+
+.form-v4-content .form-detail {
+    padding: 20px 40px;
+	position: relative;
 	width: 100%;
-	height: 100vh;
 }
-.box-area {
-	position: absolute;
-	top: 0;
-	left: 0;
+.form-v4-content .form-detail h2 {
+	color: #BD1341;
+}
+.form-v4-content .form-detail .form-row {
 	width: 100%;
-	height: 100%;
-	overflow: hidden;
+	position: relative;
 }
-.box-area li {
-	position: absolute;
+.form-v4-content .form-detail label {
+	font-weight: 600;
+	font-size: 15px;
+	color: black;
 	display: block;
-	list-style: none;
-	width: 25px;
-	height: 25px;
-	background:#A34C64;
-	animation: animate 20s linear infinite;
-	bottom: -150px;
+	margin-bottom: 8px;
 }
-.box-area li:nth-child(1) {
-	left: 86%;
-	width: 80px;
-	height: 80px;
-	animation-delay: 0s;
+.form-v4-content .form-detail .form-row label#valid {
+    position: absolute;
+    right: 20px;
+    top: 50%;
+    transform: translateY(-50%);
+    -o-transform: translateY(-50%);
+    -moz-transform: translateY(-50%);
+    -ms-transform: translateY(-50%);
+    -webkit-transform: translateY(-50%);
+    width: 14px;
+    height: 14px;
+    border-radius: 50%;
+    -o-border-radius: 50%;
+    -ms-border-radius: 50%;
+    -moz-border-radius: 50%;
+    -webkit-border-radius: 50%;
+    background: #BD1341;
 }
-.box-area li:nth-child(2) {
-	left: 12%;
-	width: 30px;
-	height: 30px;
-	animation-delay: 1.5s;
-	animation-duration: 10s;
+.form-v4-content .form-detail .form-row label#valid::after {
+	content: "";
+    position: absolute;
+    left: 5px;
+    top: 1px;
+    width: 3px;
+    height: 8px;
+    border: 1px solid #fff;
+    border-width: 0 2px 2px 0;
+    -webkit-transform: rotate(45deg);
+    -ms-transform: rotate(45deg);
+    -o-transform: rotate(45deg);
+    -moz-transform: rotate(45deg);
+    transform: rotate(45deg);
 }
-.box-area li:nth-child(3) {
-	left: 70%;
-	width: 100px;
-	height: 100px;
-	animation-delay: 5.5s;
+.form-v4-content .form-detail .form-row label.error {
+	padding-left: 0;
+	margin-left: 0;
+    display: block;
+    position: absolute;
+    bottom: -5px;
+    width: 100%;
+    background: none;
+    color: red;
 }
-.box-area li:nth-child(4) {
-	left: 42%;
-	width: 150px;
-	height: 150px;
-	animation-delay: 0s;
-	animation-duration: 15s;
+.form-v4-content .form-detail .form-row label.error::after {
+    content: "\f343";
+    font-family: "LineAwesome";
+    position: absolute;
+    transform: translate(-50%, -50%);
+    -webkit-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    -o-transform: translate(-50%, -50%);
+    -moz-transform: translate(-50%, -50%);
+    right: 10px;
+    top: -31px;
+    color: red;
+    font-size: 18px;
+    font-weight: 900;
 }
-.box-area li:nth-child(5) {
-	left: 65%;
-	width: 40px;
-	height: 40px;
-	animation-delay: 0s;
+.form-v4-content .form-detail .input-text {
+	margin-bottom: 10px;
 }
-.box-area li:nth-child(6) {
-	left: 15%;
-	width: 110px;
-	height: 110px;
-	animation-delay: 3.5s;
+.form-v4-content .form-detail input {
+	width: 100%;
+    padding: 10px;
+    border: 1px solid #e5e5e5;
+    border-radius: 5px;
+    appearance: unset;
+    -moz-appearance: unset;
+    -webkit-appearance: unset;
+    -o-appearance: unset;
+    -ms-appearance: unset;
+    outline: none;
+    -moz-outline: none;
+    -webkit-outline: none;
+    -o-outline: none;
+    -ms-outline: none;
+    font-family: 'Open Sans', sans-serif;
+    font-size: 15px;
+    color: #333;
+    box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    -o-box-sizing: border-box;
+    -ms-box-sizing: border-box;
 }
-@keyframes animate {
-	0% {
-		transform: translateY(0) rotate(0deg);
-		opacity: 1;
+.form-v4-content .form-detail .form-row input:focus {
+	border: 1px solid #BD1341;
+}
+
+.form-v4-content .form-detail .register {
+	background: #BD1341;
+	border-top-left-radius: 5px;
+	border-bottom-right-radius: 5px;
+	margin-left: 10px;
+	align-items: center;
+	justify-content: center;
+	width: auto;
+	border: none;
+	margin: 6px 0 6px 0px;
+	cursor: pointer;
+	color: #fff;
+	font-weight: 700;
+	font-size: 15px;
+}
+.form-v4-content .form-detail .register:hover {
+	background: #BD1341;
+}
+.form-v4-content .form-detail .form-row-last{
+	padding: 0;
+	margin: 0;
+}
+
+.form-v4-content .form-detail .or{
+	padding: 0;
+	align-items: center;
+	justify-content: center;
+	margin-top: 0;
+	font-size: 13px;
+}
+
+.form-row-last img{
+	width: 28px;
+	height: 28px;
+}
+
+/* Responsive */
+@media screen and (max-width: 991px) {
+	.form-v4-content {
+		margin: 180px 20px;
+		flex-direction:  column;
+		-o-flex-direction:  column;
+		-ms-flex-direction:  column;
+		-moz-flex-direction:  column;
+		-webkit-flex-direction:  column;
 	}
-	100% {
-		transform: translateY(-800px) rotate(360deg);
-		opacity: 0;
+	.form-v4-content .form-left {
+		width: auto;
+		border-top-right-radius: 10px;
+		border-bottom-left-radius: 0;
+	}
+	.form-v4-content .form-detail {
+		padding: 30px 20px 30px 20px;
+	    width: auto;
+	}
+}
+/* @media screen and (max-width: 575px) {
+	.form-v4-content .form-detail .form-group {
+		flex-direction: column;
+		-o-flex-direction:  column;
+		-ms-flex-direction:  column;
+		-moz-flex-direction:  column;
+		-webkit-flex-direction:  column;
+		margin: 0;
+	}
+	.form-v4-content .form-detail .form-group .form-row.form-row-1 {
+		width: 100%;
+		padding:  0;
 	}
 } */
